--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <div id=textSource>
         <p>Source</p>
         <textarea id=sourceinput class=changingfield></textarea>
+        <div id=sourceinputselectable>aa</div>
       </div>
     </div>
   </div>
