Highlight one find at a time instead of all at the same time

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div id=textSource>
         <p>Source</p>
         <textarea id=sourceinput class=changingfield></textarea>
-        <div id=sourceinputselectable>aa</div>
+        <div id=sourceinputselectable></div>
       </div>
     </div>
   </div>
