Make search works the same way in both modes (normal & regex)

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <div id=fieldDefs>
         <div id=fieldDefsHeader>
           <p class=fieldNameCol>Field Name</p>
-          <p class=expressionCol>Preceding Expression</p>
-          <p class=expressionCol>Following Expression</p>
+          <p class=expressionCol>Preceding RegEx</p>
+          <p class=expressionCol>Following RegEx</p>
           <p class=deleteButtonCol>&nbsp;</p>
         </div>
         <div id=fieldDefsRows>
