--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <button id=addRowButton class=fieldDefToolBarButton>Add field</button>
           <button id=saveFieldDefButton class=fieldDefToolBarButton>Export Field Def</button>
           <button id=loadFieldDefButton class=fieldDefToolBarButton onclick="document.getElementById('loadFieldDefInput').click()">Import Field Def</button>
-          <input type="file" style="visibility: hidden;width: 2px;" id=loadFieldDefInput class=fieldDefToolBarButton value />
+          <input type="file" style="display:none;" id=loadFieldDefInput class=fieldDefToolBarButton value />
         </div>
       </div>
       <div id=resultingCVS>
