Search for the closing delimiter only if the corresponding opening one was found

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <div id=fieldDefs>
         <div id=fieldDefsHeader>
           <p class=fieldNameCol>Field Name</p>
-          <p class=expressionCol>Preceding RegEx Delimiter</p>
-          <p class=expressionCol>Following RegEx Delimiter</p>
+          <p class=expressionCol>Opening RegEx Delimiter</p>
+          <p class=expressionCol>Closing RegEx Delimiter</p>
           <p class=deleteButtonCol>&nbsp;</p>
         </div>
         <div id=fieldDefsRows>
