--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
       </div>
       <div id=resultingCVS>
         <p class=boldHeader>Resulting CSV</p>
-        <textarea id=csvinput></textarea>
+        <textarea id=resultingCVSinput></textarea>
+        <button id=saveResCSVButton>Save</button>
       </div>
     </div>
     <div id=dataSource>
