--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
       <div id=resultingCVS>
         <p class=boldHeader>Resulting CSV</p>
-        <textarea id=resultingCVSinput></textarea>
+        <textarea id=resultingCSVinput></textarea>
         <button id=saveResCSVButton>Save</button>
       </div>
     </div>
