Added a label for the highlighted source

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <div id=dataSource>
       <p class=boldHeader>Source</p>
       <textarea id=sourceinput class=changingfield></textarea>
+      <p class=boldHeader>Highlighted Source</p>
       <div id=sourceinputselectable></div>
     </div>
   </div>
