Added Fields set for CV Canadien Founding

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <select id=predefinedFieldSetsSelect>
           <option>None</option>
           <option value="CVCanadienArtilePeerReviewed">CVCanadien - Articles Peer Reviewed</option>
+          <option value="CVCanadienFounding">CVCanadien - Founding</option>
         </select>
         <button id=loadPredefFieldDefButton>Load</button>
       </div>
