--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <p class=boldHeader>Predefined Fields Set</p>
         <select id=predefinedFieldSetsSelect>
           <option>None</option>
-          <option value="CVCanadienArtilePeerReviewed">CVCanadien - Articles Peer Reviewed</option>
-          <option value="CVCanadienFounding">CVCanadien - Founding</option>
+          <option value="CVCanadienPeerReviewedArticles">CV Canadien - Peer Reviewed Articles</option>
+          <option value="CVCanadienFinancement">CV Canadien - Financement</option>
         </select>
         <button id=loadPredefFieldDefButton>Load</button>
       </div>
