Added field set for CV Canadien Encadrement d'étudiants

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <option>None</option>
           <option value="CVCanadienPeerReviewedArticles">CV Canadien - Peer Reviewed Articles</option>
           <option value="CVCanadienFinancement">CV Canadien - Financement</option>
+          <option value="CVCanadienEncadrementEtudiants">CV Canadien - Encadrement d'étudiants</option>
         </select>
         <button id=loadPredefFieldDefButton>Load</button>
       </div>
