Added fields set for CV Canadien Présentations

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <option value="CVCanadienPeerReviewedArticles">CV Canadien - Peer Reviewed Articles</option>
           <option value="CVCanadienFinancement">CV Canadien - Financement</option>
           <option value="CVCanadienEncadrementEtudiants">CV Canadien - Encadrement d'étudiants</option>
+          <option value="CVCanadienPresentations">CV Canadien - Présentatons</option>
         </select>
         <button id=loadPredefFieldDefButton>Load</button>
       </div>
