Added fields sets for Articles de conférence, Articles de magazine and Media intervention

--- a/index.html
+++ b/index.html
@@ -50,9 +50,12 @@
         <select id=predefinedFieldSetsSelect>
           <option>None</option>
           <option value="CVCanadienPeerReviewedArticles">CV Canadien - Peer Reviewed Articles</option>
+          <option value="CVCanadienArticlesDeMagazine">CV Canadien - Articles de magazine</option>
+          <option value="CVCanadienArticlesDeConference">CV Canadien - Articles de conférence</option>
           <option value="CVCanadienFinancement">CV Canadien - Financement</option>
           <option value="CVCanadienEncadrementEtudiants">CV Canadien - Encadrement d'étudiants</option>
           <option value="CVCanadienPresentations">CV Canadien - Présentatons</option>
+          <option value="CVCanadienInterventionsMedias">CV Canadien - Interventions dans les médias</option>
         </select>
         <button id=loadPredefFieldDefButton>Load</button>
       </div>
