Added predefined fields set for Articles from Google Scholar; moved todos to GitHub

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div id="predefinedFieldSets">
-        <p class=boldHeader>Predefined Fields Set</p>
+        <p class=boldHeader>Predefined Fields Sets</p>
         <select id=predefinedFieldSetsSelect>
           <option>None</option>
           <option value="CVCanadienPeerReviewedArticles">CV Canadien - Peer Reviewed Articles</option>
@@ -56,6 +56,7 @@
           <option value="CVCanadienEncadrementEtudiants">CV Canadien - Encadrement d'étudiants</option>
           <option value="CVCanadienPresentations">CV Canadien - Présentatons</option>
           <option value="CVCanadienInterventionsMedias">CV Canadien - Interventions dans les médias</option>
+          <option value="ArticlesFromGoogleScholar">Articles de Google Scholar</option>
         </select>
         <button id=loadPredefFieldDefButton>Load</button>
       </div>
