Added fieldsset for CV Canadien - Encadrement d'étudiants and made sure a non consuming regex can be used as ending delimiter

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <option value="CVCanadienArticlesDeConference">CV Canadien - Articles de conférence</option>
           <option value="CVCanadienFinancement">CV Canadien - Financement</option>
           <option value="CVCanadienEncadrementEtudiants">CV Canadien - Encadrement d'étudiants</option>
+          <option value="CVCanadienEncadrementEtudiantsNomPrenom">CV Canadien - Encadrement d'étudiants (nom, prénom)</option>          
           <option value="CVCanadienPresentations">CV Canadien - Présentatons</option>
           <option value="CVCanadienInterventionsMedias">CV Canadien - Interventions dans les médias</option>
           <option value="ArticlesFromGoogleScholar">Articles de Google Scholar</option>
